--- a/Makefile.epel
+++ b/Makefile.epel
@@ -12,9 +12,8 @@ RSYNCOPTS=-a --no-owner --no-group
 
 # "mock" configurations to build with, activate only as needed
 # Some RHEL dependencies are supplied locally in awsclirepo
-#MOCKS+=epel-6-x86_64
-MOCKS+=awsclirepo-6-x86_64
-MOCKS+=awsclirepo-7-x86_64
+MOCKS+=epel-6-x86_64
+MOCKS+=epel-7-x86_64
 
 # Local yum compatible RPM repository
 REPOBASEDIR="`/bin/pwd | xargs dirname`/awsclirepo"
@@ -64,8 +63,10 @@ install:: $(MOCKS)
 	    case $$repo in \
 		*-6-x86_64) yumrelease=el/6; yumarch=x86_64; ;; \
 		*-7-x86_64) yumrelease=el/7; yumarch=x86_64; ;; \
-		*-30-x86_64) yumrelease=fedora/30; yumarch=x86_64; ;; \
-		*-f30-x86_64) yumrelease=fedora/30; yumarch=x86_64; ;; \
+		*-28-x86_64) yumrelease=fedora/28; yumarch=x86_64; ;; \
+		*-29-x86_64) yumrelease=fedora/29; yumarch=x86_64; ;; \
+		*-f28-x86_64) yumrelease=fedora/28; yumarch=x86_64; ;; \
+		*-f29-x86_64) yumrelease=fedora/29; yumarch=x86_64; ;; \
 		*) echo "Unrecognized release for $$repo, exiting" >&2; exit 1; ;; \
 	    esac; \
 	    rpmdir=$(REPOBASEDIR)/$$yumrelease/$$yumarch; \
