--- a/Makefile.python6
+++ b/Makefile.python6
@@ -26,11 +26,7 @@ SPEC := `ls *.spec | head -1`
 all:: /usr/bin/createrepo
 all:: $(MOCKS)
 
-# Get any tarballes as describe by .spec
-getsrc:
-	spectool -g $(SPEC)
-
-# Get any tarballes as describe by .spec
+# Get any tarballs as describe by .spec
 getsrc:
 	spectool -g $(SPEC)
 
