--- a/Makefile.epel6
+++ b/Makefile.epel6
@@ -13,6 +13,8 @@ RSYNCOPTS=-a --no-owner --no-group
 # "mock" configurations to build with, activate only as needed
 # Some RHEL dependencies are supplied locally in awsclirepo
 MOCKS+=epel-6-x86_64
+#MOCKS+=epel-7-x86_64
+#MOCKS+=epel-8-x86_64
 
 # Local yum compatible RPM repository
 REPOBASEDIR="`/bin/pwd | xargs dirname`/awsclirepo"
