--- a/Makefile.python6
+++ b/Makefile.python6
@@ -15,8 +15,6 @@ RSYNCOPTS=-a --no-owner --no-group
 #MOCKS+=epel-6-x86_64
 MOCKS+=awsclirepo-6-x86_64
 
-MOCkCFGS+=$(MOCKS)
-
 # Local yum compatible RPM repository
 REPOBASEDIR="`/bin/pwd | xargs dirname`/awsclirepo"
 
@@ -31,30 +29,36 @@ all:: $(MOCKS)
 getsrc:
 	spectool -g $(SPEC)
 
-srpm:: FORCE
-	@echo "Building $(SPEC) SRPM"
-	rm -rf rpmbuild
+srpm:: src.rpm
+
+#.PHONY:: src.rpm
+src.rpm:: Makefile
+	@rm -rf rpmbuild
+	@rm -f $@
+	@echo "Building SRPM with $(SPEC)"
 	rpmbuild --define '_topdir $(PWD)/rpmbuild' \
 		--define '_sourcedir $(PWD)' \
 		-bs $(SPEC) --nodeps
+	mv rpmbuild/SRPMS/*.src.rpm src.rpm
 
-# Needed for python27 compatible compilation
-build:: srpm FORCE
+.PHONY: build
+build:: src.rpm
 	rpmbuild --define '_topdir $(PWD)/rpmbuild' \
-		--rebuild rpmbuild/SRPMS/*.src.rpm
+		--rebuild $?
 
-$(MOCKS):: srpm FORCE
-	@if [ -n "`find $@ -name \*.rpm ! -name \*.src.rpm 2>/dev/null`" ]; then \
-		echo "	Skipping $(SPEC) in $@ with RPMS"; \
+.PHONY: $(MOCKS)
+$(MOCKS):: src.rpm
+	@if [ -e $@ -a -n "`find $@ -name \*.rpm`" ]; then \
+		echo "	Skipping RPM populated $@"; \
 	else \
-		echo "Storing " rpmbuild/SRPMS/*.src.rpm "as $@.src.rpm"; \
-		install rpmbuild/SRPMS/*.src.rpm $@.src.rpm; \
-		echo "Building $@.src.rpm in $@"; \
+		echo "Actally building $? in $@"; \
 		rm -rf $@; \
 		mock -q -r $(PWD)/../$@.cfg \
-		    --resultdir=$(PWD)/$@ \
-		    $@.src.rpm; \
+		     --resultdir=$(PWD)/$@ \
+		     $?; \
 	fi
+
+mock:: $(MOCKS)
 
 mock:: $(MOCKS)
 
@@ -80,10 +84,6 @@ install:: $(MOCKS)
 	    rsync $(RSYNCSAFEOPTS) --exclude=*.src.rpm --exclude=*debuginfo*.rpm $$repo/*.rpm $$rpmdir/. || exit 1; \
 	    createrepo -q $$rpmdir/.; \
 	done
-	@for name in $(MOCKCFGS); do \
-	     echo Refreshing ../$${name}.cfg; \
-	     touch ../$${name}.cfg; \
-	done
 
 clean::
 	rm -rf $(MOCKS)
@@ -94,5 +94,3 @@ clean::
 	rm -f *.out
 
 realclean distclean:: clean
-
-FORCE:
