Silence find errors in Makefiles

--- a/Makefile.python6
+++ b/Makefile.python6
@@ -48,7 +48,7 @@ build:: src.rpm
 
 .PHONY: $(MOCKS)
 $(MOCKS):: src.rpm
-	@if [ -e $@ -a -n "`find $@ -name \*.rpm`" ]; then \
+	@if [ -e $@ -a -n "`find $@ -name \*.rpm 2>/dev/nul`" ]; then \
 		echo "	Skipping RPM populated $@"; \
 	else \
 		echo "Actally building $? in $@"; \
