--- a/Makefile.epel7
+++ b/Makefile.epel7
@@ -12,7 +12,8 @@ RSYNCOPTS=-a --no-owner --no-group
 
 # "mock" configurations to build with, activate only as needed
 # Some RHEL dependencies are supplied locally in awsclirepo
-MOCKS+=epel-6-x86_64
+# Disabled, RHEL 6 is now obsolete
+#MOCKS+=epel-6-x86_64
 MOCKS+=epel-7-x86_64
 #MOCKS+=epel-8-x86_64
 
