--- a/Makefile.python
+++ b/Makefile.python
@@ -12,7 +12,8 @@ RSYNCOPTS=-a --no-owner --no-group
 
 # "mock" configurations to build with, activate only as needed
 # Some RHEL dependencies are supplied locally in awsclirepo
-MOCKS+=awsclirepo-6-x86_64
+# Disabled, RHEL 6 is now obsolete
+#MOCKS+=awsclirepo-6-x86_64
 MOCKS+=awsclirepo-7-x86_64
 MOCKS+=awsclirepo-8-x86_64
 
