Use centos+epel mock settings

--- a/Makefile.epel7
+++ b/Makefile.epel7
@@ -13,8 +13,8 @@ RSYNCOPTS=-a --no-owner --no-group
 # "mock" configurations to build with, activate only as needed
 # Some RHEL dependencies are supplied locally in awsclirepo
 # Disabled, RHEL 6 is now obsolete
-MOCKS+=epel-7-x86_64
-#MOCKS+=epel-8-x86_64
+MOCKS+=centos+epel-7-x86_64
+#MOCKS+=centos+epel-8-x86_64
 
 # Local yum compatible RPM repository
 REPOBASEDIR="`/bin/pwd | xargs dirname`/awsclirepo"
