--- a/Makefile.epel
+++ b/Makefile.epel
@@ -13,8 +13,8 @@ RSYNCSAFEOPTS=$(RSYNCOPTS) --ignore-existing
 
 # "mock" configurations to build with, activate only as needed
 # Some RHEL dependencies are supplied locally in awsclirepo
-MOCKS+=epel-7-x86_64
-MOCKS+=epel-8-x86_64
+MOCKS+=centos+epel-7-x86_64
+MOCKS+=centos+epel-8-x86_64
 
 # Local yum compatible RPM repository
 REPOBASEDIR="`/bin/pwd | xargs dirname`/awsclirepo"
