--- a/Makefile.epel7
+++ b/Makefile.epel7
@@ -15,6 +15,7 @@ RSYNCOPTS=-a --no-owner --no-group
 # Disabled, RHEL 6 is now obsolete
 MOCKS+=centos+epel-7-x86_64
 #MOCKS+=centos-stream+epel-8-x86_64
+#MOCKS+=centos-stream+epel-9-x86_64
 
 # Local yum compatible RPM repository
 REPOBASEDIR="`/bin/pwd | xargs dirname`/awsclirepo"
@@ -69,8 +70,9 @@ install:: $(MOCKS)
 	    case $$repo in \
 		*-7-x86_64) yumrelease=el/7; yumarch=x86_64; ;; \
 		*-8-x86_64) yumrelease=el/8; yumarch=x86_64; ;; \
-		*-33-x86_64) yumrelease=fedora/33; yumarch=x86_64; ;; \
-		*-f33-x86_64) yumrelease=fedora/33; yumarch=x86_64; ;; \
+		*-9-x86_64) yumrelease=el/8; yumarch=x86_64; ;; \
+		*-36-x86_64) yumrelease=fedora/36; yumarch=x86_64; ;; \
+		*-f36-x86_64) yumrelease=fedora/36; yumarch=x86_64; ;; \
 		*) echo "Unrecognized release for $$repo, exiting" >&2; exit 1; ;; \
 	    esac; \
 	    rpmdir=$(REPOBASEDIR)/$$yumrelease/$$yumarch; \
