--- a/Makefile.epel
+++ b/Makefile.epel
@@ -50,7 +50,7 @@ build:: src.rpm
 
 .PHONY: $(MOCKS)
 $(MOCKS):: src.rpm
-	@if [ -e $@ -a -n "`find $@ -name \*.rpm 2>/dev/null`" ]; then \
+	@if [ -e $@ -a -n "`find $@ -name '*.rpm' ! -name '*.src.rpm' 2>/dev/null`" ]; then \
 		echo "	Skipping RPM populated $@"; \
 	else \
 		echo "Actally building $? in $@"; \
