--- a/Makefile.epel7
+++ b/Makefile.epel7
@@ -73,6 +73,8 @@ install:: $(MOCKS)
 		*-9-x86_64) yumrelease=el/8; yumarch=x86_64; ;; \
 		*-37-x86_64) yumrelease=fedora/37; yumarch=x86_64; ;; \
 		*-f37-x86_64) yumrelease=fedora/37; yumarch=x86_64; ;; \
+		*-38-x86_64) yumrelease=fedora/38; yumarch=x86_64; ;; \
+		*-f38-x86_64) yumrelease=fedora/38; yumarch=x86_64; ;; \
 		*) echo "Unrecognized release for $$repo, exiting" >&2; exit 1; ;; \
 	    esac; \
 	    rpmdir=$(REPOBASEDIR)/$$yumrelease/$$yumarch; \
